update description meta on index.mdx

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Simple. Speedy. Solid.
-description: Get started building your docs site with Starlight.
+title: TidesDB - Simple. Speedy. Solid.
+description: TidesDB is a fast embeddable persistent storage engine engine library.
 template: splash
 hero:
   tagline: TidesDB is an embeddable persistant key-value storage engine.
