update index to reflect beta testing

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,16 +1,16 @@
 ---
-title: TidesDB - Simple. Speedy. Solid.
-description: TidesDB is a fast embeddable persistent storage engine engine library.
+title: Simple. Speedy. Solid.
+description: TidesDB is a fast embeddable persistent storage engine engine library for C, C++, Python, GO and more.
 template: splash
 hero:
   tagline: TidesDB is an embeddable persistant key-value storage engine.
   actions:
-    - text: Learn
+    - text: Get started
       link: getting-started/what-is-tidesdb
       icon: right-arrow
-    - text: Get started with TidesDB
+    - text: Currently in BETA testing
       link: https://tidesdb.com/
-      icon: external
+      icon: warning
       variant: minimal
 ---
 
