--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Simple. Speedy. Solid.
+title: Surf writes. Sail reads. Anchor reliability.
 description: TidesDB is a fast embeddable persistent storage engine engine library for C, C++, Python, GO and more.
 template: splash
 hero:
