Better explainations on how-does-tidesdb-work, also addition to read me regarding contributions

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Surf writes. Sail reads. Anchor reliability.
 description: TidesDB is a fast embeddable persistent storage engine engine library for C, C++, Python, GO and more.
 template: splash
 hero:
-  tagline: TidesDB is an embeddable persistant key-value storage engine.
+  tagline: TidesDB is an embeddable persistant key-value store.
   actions:
     - text: Get started
       link: getting-started/what-is-tidesdb
