--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -17,6 +17,11 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 import Footer from '../../components/Footer.astro';
+import VersionBadge from '../../components/VersionBadge.astro';
+
+<div style="text-align: center; margin: 2rem 0;">
+	<VersionBadge />
+</div>
 
 <div class="wave-container">
 	<div class="wave wave-1"></div>
