further details across the board

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -43,10 +43,10 @@ import VersionBadge from '../../components/VersionBadge.astro';
 
 <CardGrid stagger>
 	<Card title="ACID Transactions" icon="approve-check" style="--card-index: 0">
-		Atomic, consistent, isolated (Read Committed), and durable. Transactions support multiple operations across column families. Writers are serialized per column family ensuring atomicity, while COW provides consistency for concurrent readers.
+		Atomic, consistent, isolated (read committed), and durable. Transactions support multiple operations across column families. Writers are serialized per column family ensuring atomicity, while COW provides consistency for concurrent readers within a column family.
 	</Card>
 	<Card title="Great Concurrency" icon="rocket" style="--card-index: 1">
-		Readers don't block readers or writers. Optimized reader-writer locks per column family for maximum throughput.
+		Readers don't block readers or writers and vice versa.
 	</Card>
 	<Card title="LSM-Tree Architecture" icon="setting" style="--card-index: 2">
 		Log-structured merge-tree design optimized for write-heavy workloads with efficient read performance through bloom filters and block indices.
@@ -57,8 +57,8 @@ import VersionBadge from '../../components/VersionBadge.astro';
 	<Card title="Flexible Compression" icon="puzzle" style="--card-index: 3">
 		Support for Snappy, LZ4, and ZSTD compression algorithms. Configure per column family for optimal storage efficiency.
 	</Card>
-	<Card title="Background Compaction" icon="refresh" style="--card-index: 4">
-		Automatic parallel compaction with configurable thread pools. Reduces SSTable count and removes tombstones without blocking operations.
+	<Card title="Background Or Manual Compaction" icon="refresh" style="--card-index: 4">
+		Reduces SSTable count and removes tombstones without blocking operations within column families.
 	</Card>
 	<Card title="Cross-Platform" icon="laptop" style="--card-index: 5">
 		Native support for Linux, macOS, and Windows with platform abstraction layer for consistent behavior.
@@ -67,7 +67,7 @@ import VersionBadge from '../../components/VersionBadge.astro';
 
 <CardGrid stagger>
 	<Card title="Simple API" icon="open-book" style="--card-index: 7">
-		Clean, intuitive C API with consistent error handling. All functions return 0 on success with detailed error codes.
+		Clean, intuitive C API with consistent error handling.
 	</Card>
 	<Card title="Production Ready" icon="star" style="--card-index: 8">
 		Write-ahead logging, TTL support, custom comparators, and configurable sync modes for durability guarantees.
