--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Fast, embeddable storage engine
 description: A high-performance LSM-tree based key-value storage engine library written in C. Build databases or use directly as a standalone store.
 template: splash
 hero:
-  tagline: High-performance key-value storage engine for modern applications.
+  tagline: TidesDB is a high-performance key-value storage engine for modern applications.
   actions:
     - text: Get started
       link: getting-started/what-is-tidesdb
@@ -57,7 +57,7 @@ import VersionBadge from '../../components/VersionBadge.astro';
 	<Card title="Flexible Compression" icon="puzzle" style="--card-index: 3">
 		Support for Snappy, LZ4, and ZSTD compression algorithms. Configure per column family for optimal storage efficiency.
 	</Card>
-	<Card title="Background Or Manual Compaction" icon="refresh" style="--card-index: 4">
+	<Card title="Background Or Manual Compaction" icon="random" style="--card-index: 4">
 		Reduces SSTable count and removes tombstones without blocking operations within column families.
 	</Card>
 	<Card title="Cross-Platform" icon="laptop" style="--card-index: 5">
