minor updates throughout

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Fast, embeddable storage engine
+title: Fast, embeddable key-value storage
 description: A high-performance LSM-tree based key-value storage engine library written in C. Build databases or use directly as a standalone store.
 template: splash
 hero:
@@ -61,7 +61,7 @@ import VersionBadge from '../../components/VersionBadge.astro';
 		Reduces SSTable count and removes tombstones without blocking operations within column families.
 	</Card>
 	<Card title="Cross-Platform" icon="laptop" style="--card-index: 5">
-		Native support for Linux, macOS, and Windows with platform abstraction layer for consistent behavior.
+		Native support for 32-bit and 64-bit Linux, macOS, and Windows with platform abstraction layer for consistent behavior.
 	</Card>
 	<Card title="Easy to use API" icon="open-book" style="--card-index: 6">
 		Clean, intuitive C API with consistent error handling.
