--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,7 +11,7 @@ hero:
       variant: primary
     - text: View on GitHub
       link: https://github.com/tidesdb/tidesdb
-      icon: external
+      icon: github
       variant: minimal
 ---
 
@@ -46,7 +46,7 @@ import VersionBadge from '../../components/VersionBadge.astro';
 		ACID transactions that are atomic, consistent, isolated, and durable across multiple column families. 
 	</Card>
 	<Card title="Concurrent" icon="rocket" style="--card-index: 1">
-		Readers don't block readers or writers within a column family, and writers don't block readers.
+		Readers don't block readers or writers, and writers don't block readers.  Writes are serialized per column family.
 	</Card>
 	<Card title="LSM-Tree Architecture" icon="setting" style="--card-index: 2">
 		Log-structured merge-tree design optimized for write-heavy workloads with efficient read performance.
@@ -60,8 +60,8 @@ import VersionBadge from '../../components/VersionBadge.astro';
 	<Card title="Background Or Manual Compaction" icon="random" style="--card-index: 4">
 		Reduces SSTable count and removes expired/deleted keys without blocking column family operations.
 	</Card>
-	<Card title="Cross-Platform" icon="laptop" style="--card-index: 5">
-		Native support for 32-bit and 64-bit Linux, macOS, and Windows with platform abstraction layer for consistent behavior.
+	<Card title="Cross-Platform & Portable" icon="laptop" style="--card-index: 5">
+		Native support for 32-bit and 64-bit Linux, macOS, and Windows with platform abstraction layer for consistent behavior.  Storage files are portable across platforms and architectures.
 	</Card>
 	<Card title="Easy to use API" icon="open-book" style="--card-index: 6">
 		Clean, intuitive C API with consistent error handling.
