--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -39,10 +39,7 @@ import VersionBadge from '../../components/VersionBadge.astro';
 
 <CardGrid stagger>
 	<Card title="ACID Transactions" icon="seti:lock" style="--card-index: 0">
-		ACID transactions with read-committed isolation: writes are atomic and durable via write-ahead logging, reads always see the latest committed data with read-your-own-writes semantics. Concurrent writes use last-write-wins conflict resolution through atomic CAS operations.
-	</Card>
-	<Card title="Concurrent" icon="rocket" style="--card-index: 1">
-		Lock-free concurrency with non-blocking writes and readers.  Linear scalability with CPU cores.
+		The database implements ACID transactions with full MVCC supporting five isolation levels from read-uncommitted through serializable. 
 	</Card>
 	<Card title="LSM-Tree Architecture" icon="seti:db" style="--card-index: 2">
 		Log-structured merge-tree design optimized for write-heavy workloads with efficient read performance.
