update for tdb6

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -44,6 +44,9 @@ import VersionBadge from '../../components/VersionBadge.astro';
 	<Card title="LSM-Tree Architecture" icon="seti:db" style="--card-index: 2">
 		Log-structured merge-tree design optimized for write-heavy workloads with efficient read performance.
 	</Card>
+	<Card title="Linear scalability" icon="seti:db" style="--card-index: 3">
+		The engine is designed for maximum scalability within the constraints of ACID guarantees.
+	</Card>
 </CardGrid>
 
 <CardGrid stagger>
