minor index touch up

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -47,6 +47,9 @@ import VersionBadge from '../../components/VersionBadge.astro';
 	<Card title="Near Linear Scalability" icon="seti:db" style="--card-index: 3">
 		The engine is designed for maximum scalability within the constraints of ACID guarantees.
 	</Card>
+	<Card title="Outperforms RocksDB" icon="up-arrow" style="--card-index: 4">
+		Outperforms leaders in the space such as RocksDB across almost all workloads by large margins.
+	</Card>
 </CardGrid>
 
 <CardGrid stagger>
