minor homepage and features list additions

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -48,7 +48,7 @@ import VersionBadge from '../../components/VersionBadge.astro';
 		The engine is designed for maximum scalability within the constraints of ACID guarantees.
 	</Card>
 	<Card title="Outperforms RocksDB" icon="up-arrow" style="--card-index: 4">
-		Outperforms leaders in the space such as RocksDB across almost all workloads by large margins.
+		Outperforms leaders in the space such as RocksDB across almost all workloads by large margins.  See <a href="articles/what-i-learned-building-a-storage-engine-that-outperforms-rocksdb">this article</a> for details.
 	</Card>
 </CardGrid>
 
