minor touch up home page one additional column regarding tidesql

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -53,6 +53,9 @@ import VersionBadge from '../../components/VersionBadge.astro';
 </CardGrid>
 
 <CardGrid stagger>
+	<Card title="Pluggable MariaDB Engine (TideSQL)" icon="open-book" style="--card-index: 6">
+		TidesDB can be used as a pluggable storage engine for MariaDB. <a href="reference/tidesql">Learn more</a>
+	</Card>
 	<Card title="Flexible Compression" icon="puzzle" style="--card-index: 3">
 		Support for Snappy, LZ4, and ZSTD compression algorithms. Configure per column family for optimal storage efficiency.
 	</Card>
